--- a/exp/resume.html
+++ b/exp/resume.html
@@ -1,44 +1,56 @@
 ---
 layout: "default"
+title: "Resume"
 ---
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+
 <header>
-    <h1>Responsive Vertical Timeline</h1>
+    <h1>Benjamin Kampmann</h1>
 </header>
 
 <section id="cd-timeline" class="cd-container">
     <div class="cd-timeline-block">
         <div class="cd-timeline-img cd-picture">
-            <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/148866/cd-icon-picture.svg" alt="Picture">
+            <i class="fa fa-university"></i>
         </div> <!-- cd-timeline-img -->
 
         <div class="cd-timeline-content">
-            <h2>Title of section 1</h2>
+            <h2>Hackership</h2>
+            <h3>Founder, Lead-Coach</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, optio, dolorum provident rerum aut hic quasi placeat iure tempora laudantium ipsa ad debitis unde? Iste voluptatibus minus veritatis qui ut.</p>
-            <a href="#0" class="cd-read-more">Read more</a>
-            <span class="cd-date">Jan 14</span>
+            <a href="http://www.hackership.org/" class="cd-read-more">Website</a>
+            <span class="cd-date">Mar '13 – today</span>
         </div> <!-- cd-timeline-content -->
     </div> <!-- cd-timeline-block -->
 
     <div class="cd-timeline-block">
         <div class="cd-timeline-img cd-movie">
-            <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/148866/cd-icon-movie.svg" alt="Movie">
+            <i class="fa fa-university"></i>
         </div> <!-- cd-timeline-img -->
 
         <div class="cd-timeline-content">
-            <h2>Title of section 2</h2>
+            <h2>OpenTechSchool</h2>
+            <h3>Founder, Chairperson</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, optio, dolorum provident rerum aut hic quasi placeat iure tempora laudantium ipsa ad debitis unde?</p>
             <a href="#0" class="cd-read-more">Read more</a>
-            <span class="cd-date">Jan 18</span>
+            <span class="cd-date">Apr '12 – today</span>
         </div> <!-- cd-timeline-content -->
     </div> <!-- cd-timeline-block -->
 
     <div class="cd-timeline-block">
-        <div class="cd-timeline-img cd-picture">
-            <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/148866/cd-icon-picture.svg" alt="Picture">
+        <div class="cd-timeline-img cd-movie">
+            <i class="fa fa-desktop"></i>
         </div> <!-- cd-timeline-img -->
 
         <div class="cd-timeline-content">
-            <h2>Title of section 3</h2>
+            <h2>Wer Weiss Was</h2>
+            <h3>Chief Architect</h3>
+            <div>
+                <span class="badge-super">Discourse</span>
+                <span class="badge">Ruby (Rails)</span>
+                <span class="badge-hl">EmberJS (Javascript)</span>
+                <span class="badge">SaSS (CSS)</span>
+            </div>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi, obcaecati, quisquam id molestias eaque asperiores voluptatibus cupiditate error assumenda delectus odit similique earum voluptatem doloremque dolorem ipsam quae rerum quis. Odit, itaque, deserunt corporis vero ipsum nisi eius odio natus ullam provident pariatur temporibus quia eos repellat consequuntur perferendis enim amet quae quasi repudiandae sed quod veniam dolore possimus rem voluptatum eveniet eligendi quis fugiat aliquam sunt similique aut adipisci.</p>
             <a href="#0" class="cd-read-more">Read more</a>
             <span class="cd-date">Jan 24</span>
