--- a/exp/body-of-work.html
+++ b/exp/body-of-work.html
@@ -28,11 +28,11 @@ title: "Body of Work"
     >
         <div class="card-image" {% if project.image %}style="background-image:url({{project.image}});{%if project.image_css%}{{project.image_css}}{% endif %}" {% endif %}></div>
         <div class="card-header">
-          <h2>{{project.name}}</h2>
+          <h2>{{project.name}}<span class="more">{% if project.type %} {{project.type}}, {% endif %}{{project.date}}</span></h2>
           <div class="more">
             <div class="links">
-                {% if project.website %}
-                    <a href="{{project.website}}" target="_blank"><i class="fa fa-external-link fa-2x"></i></a>
+                {% if project.link %}
+                    <a href="{{project.link}}" target="_blank"><i class="fa fa-link fa-2x"></i></a>
                 {% endif %}
                 {% if project.github %}
                     <a href="https://www.github.com/{{project.github}}" target="_blank"><i class="fa fa-github fa-2x"></i></a>
