HASH support. Awesome.

--- a/exp/body-of-work.html
+++ b/exp/body-of-work.html
@@ -64,6 +64,36 @@ title: "Body of Work"
 
 <script src="awesomplete.min.js" type="text/javascript" charset="utf-8"></script>
 <script type="text/javascript" charset="utf-8">
+(function(window) {
+
+  // exit if the browser implements that event
+  if ( "onhashchange" in window.document.body ) { return; }
+
+  var location = window.location,
+    oldURL = location.href,
+    oldHash = location.hash;
+
+  // check the location hash on a 100ms interval
+  setInterval(function() {
+    var newURL = location.href,
+      newHash = location.hash;
+
+    // if the hash has changed and a handler has been bound...
+    if ( newHash != oldHash && typeof window.onhashchange === "function" ) {
+      // execute the handler
+      window.onhashchange({
+        type: "hashchange",
+        oldURL: oldURL,
+        newURL: newURL
+      });
+
+      oldURL = newURL;
+      oldHash = newHash;
+    }
+  }, 100);
+
+})(window);
+
 (function(){
     var tags = [];
 
@@ -160,10 +190,24 @@ title: "Body of Work"
             if (elem.classList.contains("active-box")){
                 elem.classList.remove("active-box");
             } else {
-                clearActive();
-                elem.classList.add("active-box");
+                window.location.hash = "#" + elem.id
             }
         });
     });
+
+    function moveToHash(){
+        var hash = window.location.hash.slice(1);
+        clearActive();
+        if (!hash) return
+        var item = document.getElementById(hash);
+        if (item) {
+            item.classList.add("active-box");
+            item.scrollIntoView({behavior: "smooth"});
+        }
+    }
+
+    window.onhashchange = moveToHash;
+    moveToHash();
+
 })();
 </script>
