prettify everything, mostly main

--- a/index.html
+++ b/index.html
@@ -1,5 +1,16 @@
 ---
-layout: default
+layout: clean
 ---
 
-<h1>Nothing here to see</h1>
+<div class="main box">
+  <img class="avatar" src="/assets/images/ben.png"/>
+  <h1>Benjamin Kampmann</h1>
+  <h2>Freelance OpenSource Software Architect and Developer</h2>
+  <p>I design, build and supervise the building of software (systems). Sometimes for clients, often times on my own, whenever possible as OpenSource. I care about good design in both, the User Experience and backend architecture and infrastructure. And I write about all this stuff.</p>
+  <p>
+  <ul>
+    <li><a href="/body-of-work/">Body of work</a></li>
+    <li><a href="/resume/">CV</a></li>
+    <li><a href="/blog/">Writings</a></li>
+  </ul>
+</div>
