clean up and add resume

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ layout: clean
   <p>
   <ul>
     <li><a href="/body-of-work/">Body of work</a></li>
-    <li><a href="/resume/">CV</a></li>
+    <li><a href="/resume/">Resume</a></li>
     <li><a href="/blog/">Writings</a></li>
   </ul>
 </div>
