--- a/body-of-work/index.html
+++ b/body-of-work/index.html
@@ -8,7 +8,7 @@ permalink: "/body-of-work/"
 
 <h1>Body of Work</h1>
 
-<p>(latest works first, excludes <a href="/blog">writings</a>)</p>
+<p>(selected works, ordered latest first, excludes <a href="/blog">writings</a>)</p>
 
 <div class="expander">
   <a href="javascript:void(0)" id="js-expander-trigger" class="expander-trigger expander-hidden">filter</a>
