add ebook to writings listing

--- a/writings/index.html
+++ b/writings/index.html
@@ -6,6 +6,11 @@ redirect_from:
   - /blog/
 ---
 
+
+<div class="publications">
+  <a href="/saas-pricing/" title="SaaS App Pricing"><img src="/ebooks/saas-book-cover.jpg" alt="SaaS App Pricing Book Cover"></a>
+</div>
+
 <div>
 <ul class="post-list-short">
   <li><h2>Tech</h2>
