Add Copy-Left marker

--- a/ebooks/saas-pricing.html
+++ b/ebooks/saas-pricing.html
@@ -27,5 +27,8 @@ permalink: /saas-pricing/
 			<li><a href="https://www.gitbook.com/download/epub/book/gnunicorn/ebook-saas-pricing">ePub</a></li>
 			<li><a href="https://github.com/gnunicorn/ebook-saas-pricing">sources</a></li>
 		</ul>
+		<p>
+			Published 2015 under <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/80x15.png" /></a><br/>
+		</p>
 	</div>
 </header>
