semi-announce dapp-book

--- a/writings/index.html
+++ b/writings/index.html
@@ -8,6 +8,10 @@ redirect_from:
 
 
 <div class="publications">
+
+  <a href="/dapp-book/" title="ĐApp Primer">
+  <img src="/ebooks/dapp-book-cover.jpg" alt="ĐApp Book - 
+A primer to decentributed Web App Development" /></a>
   <a href="/saas-pricing/" title="SaaS App Pricing"><img src="/ebooks/saas-book-cover.jpg" alt="SaaS App Pricing Book Cover"></a>
 </div>
 
