--- a/writings/index.html
+++ b/writings/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: Latest writings
+title: Latest Publications
 permalink: /writings/
 redirect_from:
   - /blog/
@@ -13,6 +13,13 @@ redirect_from:
   <img src="/ebooks/dapp-book-cover.jpg" alt="ĐApp Book - 
 A primer to decentributed Web App Development" /></a>
   <a href="/saas-pricing/" title="SaaS App Pricing"><img src="/ebooks/saas-book-cover.jpg" alt="SaaS App Pricing Book Cover"></a>
+</div>
+
+
+<div class="publications">
+
+  <a href="/talks/fosdem-2017-time-to-safe-the-internet/" title="FOSDEM 2017: It's time to SAFE the internet">
+  <img src="/assets/posts/2017-02-10-fosdem-talk.png" alt="FOSDEM 2017: It's time to SAFE the internet" /></a>
 </div>
 
 <div>
