--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@ layout: clean
 <div class="main box">
   <img class="main-avatar" src="/assets/images/ben.png"/>
   <h1>Benjamin Kampmann</h1>
-  <h2>@GNUnicorn<br/> Freelance OpenSource Software Developer, Architect and Educator</h2>
-  <p>I design, build and supervise the building of software (systems). Sometimes for clients, often on my own, whenever possible as OpenSource. I care about good design on both sides: the product and user experience as well as a robust technological architecture and infrastructure. Even more, I care about people; I mentor and coach, write and facilitate the writing of learning materials and organise community events and organisations.</p>
+  <h2>@GNUnicorn<br/> Freelance OpenSource Software Developer, Architect, Lead &amp; Educator</h2>
+  <p>I design, build and supervise the building of software systems, organisations and communities. Sometimes for clients, often as a volunteer, whenever possible as OpenSource. I care about good design on all sides: on the product and user experience and in a robust and scalable architecture and infrastructure. Even more, I care about people; I mentor and coach, write and educate, and facilitate and organise communities.</p>
   <p>
     <ul>
       <li><a href="/body-of-work/">Body of work</a></li>
@@ -21,13 +21,14 @@ layout: clean
 
   <p>
     <ul>
-      <li><a href="http://www.opentechschool.org">OpenTechSchool</a></li>
+      <li><a href="http://bewegung.jetzt/">DEMOKRATIE IN BEWEGUNG</a></li>
       <li><a href="http://www.rustfest.eu/">RustFest</a>.eu</li>
-      <li><a href="https://safenetwork.org/">SafeNetwork</a></li>
-      <li><a href="http://www.bashy.io/">The Bashy Initiative</a></li>
       <li><a href="http://www.arewewebyet.org">AreWeWebYet</a></li>
       <li><a href="https://clippy.bashy.io/">Clippy as a Service</a></li>
       <li><a href="http://www.opensourcebash.org/">OpenSourceBash</a></li>
       <li><a href="http://www.hackership.org">Hackership</a></li>
+      <li><a href="http://www.opentechschool.org">OpenTechSchool</a></li>
+      <li><a href="https://safenetwork.org/">SafeNetwork</a></li>
+      <li><a href="http://www.bashy.io/">The Bashy Initiative</a></li>
   </p>
 </div>
