adding cobalt to page

--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@ layout: clean
 
   <p>
     <ul>
-      <li><a href="http://bewegung.jetzt/">DEMOKRATIE IN BEWEGUNG</a></li>
+      <li><a href="https://bewegung.jetzt/">DEMOKRATIE IN BEWEGUNG</a></li>
+      <li><a href="https://github.com/cobalt-org/cobalt.rs">Cobalt</a></li>
       <li><a href="http://www.rustfest.eu/">RustFest</a>.eu</li>
       <li><a href="http://www.arewewebyet.org">AreWeWebYet</a></li>
       <li><a href="https://clippy.bashy.io/">Clippy as a Service</a></li>
