--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@ layout: clean
   <p>
     <ul>
       <li><a href="https://bewegung.jetzt/">DEMOKRATIE IN BEWEGUNG</a></li>
+      <li><a href="https://unterbau.tech/">Unterbau Tech</a></li>
       <li><a href="https://github.com/cobalt-org/cobalt.rs">Cobalt</a></li>
       <li><a href="http://www.rustfest.eu/">RustFest</a>.eu</li>
       <li><a href="http://www.arewewebyet.org">AreWeWebYet</a></li>
-      <li><a href="https://clippy.bashy.io/">Clippy as a Service</a></li>
       <li><a href="http://www.opensourcebash.org/">OpenSourceBash</a></li>
       <li><a href="http://www.hackership.org">Hackership</a></li>
       <li><a href="http://www.opentechschool.org">OpenTechSchool</a></li>
