--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@ layout: clean
 <div class="main box">
   <img class="main-avatar" src="/assets/images/ben.png"/>
   <h1>Benjamin Kampmann</h1>
-  <h2>@GNUnicorn<br/> Freelance OpenSource Software Developer, Architect, Lead &amp; Educator</h2>
-  <p>I design, build and supervise the building of software systems, organisations and communities. Sometimes for clients, often as a volunteer, whenever possible as OpenSource. I care about good design on all sides: on the product and user experience and in a robust and scalable architecture and infrastructure. Even more, I care about people; I mentor and coach, write and educate, and facilitate and organise communities.</p>
+  <h2>@GNUnicorn<br/> OpenSource Software Developer, Architect, Lead &amp; Educator</h2>
+  <p>I design, build and supervise the building of software systems, organisations and communities. Sometimes for money, often as a volunteer, whenever possible as OpenSource. I care about good design on all sides: on the product and user experience and in a robust and scalable architecture and infrastructure. Even more, I care about people; I mentor and coach, write and educate, and facilitate and organise communities.</p>
   <p>
     <ul>
       <li><a href="/body-of-work/">Body of work</a></li>
@@ -21,13 +21,13 @@ layout: clean
 
   <p>
     <ul>
-      <li><a href="https://bewegung.jetzt/">DEMOKRATIE IN BEWEGUNG</a></li>
       <li><a href="https://www.parity.io/">Substrate (Parity)</a></li>
       <li><a href="https://web3.foundation/">Web3</a></li>
-      <li><a href="http://www.rustfest.eu/">RustFest</a>.eu</li>
-      <li><a href="http://www.arewewebyet.org">AreWeWebYet</a></li>
-      <li><a href="http://www.hackership.org">Hackership</a></li>
-      <li><a href="http://www.opentechschool.org">OpenTechSchool</a></li>
-      <li><a href="http://www.bashy.io/">The Bashy Initiative</a></li>
+      <li><a href="https://radikal.jetzt/">radikal*</a></li>
+      <li><a href="https://www.rustfest.eu/">RustFest</a>.eu</li>
+      <li><a href="https://www.arewewebyet.org">AreWeWebYet</a></li>
+      <li><a href="https://www.hackership.org">Hackership</a></li>
+      <li><a href="https://www.opentechschool.org">OpenTechSchool</a></li>
+      <li><a href="https://www.bashy.io/">The Bashy Initiative</a></li>
   </p>
 </div>
