--- a/writings/index.html
+++ b/writings/index.html
@@ -8,9 +8,45 @@ redirect_from:
 
 
 <div class="publications">
-  <a href="/talks/fosdem-2017-time-to-safe-the-internet/" title="FOSDEM 2017: It's time to SAFE the internet">
-  <img src="/assets/posts/2017-02-10-fosdem-talk.png" alt="FOSDEM 2017: It's time to SAFE the internet" /></a> 
+
+  <a href="https://www.youtube.com/watch?v=H1bfZcq7OVg">
+    <img src="/assets/posts/talk-behold-the-future.png" alt="Sub 0.1: Behold the Future is Upons us">
+  </a>
   <a href="/saas-pricing/" title="SaaS App Pricing"><img src="/ebooks/saas-book-cover.jpg" alt="SaaS App Pricing Book Cover"></a>
+</div>
+
+<div>
+  <ul class="post-list-short">
+    <li><h2>Talks</h2>
+      <ul>
+        <li>
+          <a href="https://www.youtube.com/watch?v=H1bfZcq7OVg">
+            Behold the Future is Upon us – Updates on Substrate at Sub0.1
+          </a>
+        </li>
+        <li>
+          <a href="https://www.youtube.com/watch?v=Bamo8xjPzVc">
+            A New Dawn: Building DApps with Substrate
+          </a>
+        </li>
+        <li>
+          <a href="/talks/wasm-in-the-wild/" title="Rust Cologne 2018: WASM in the Wild">
+            Rust Cologne 2018: WASM in the Wild
+          </a>
+        </li>
+        <li>
+          <a href="https://www.youtube.com/watch?v=ND1UhSzvgAk">
+            BOB 2017: privacy-first data structures on SAFE
+          </a>
+        </li>
+        <li>
+          <a href="/talks/fosdem-2017-time-to-safe-the-internet/" title="FOSDEM 2017: It's time to SAFE the internet">
+            FOSDEM 2017: Time to SAFE the internet
+          </a>
+        </li>
+      </ul>
+    </li>
+  </ul>
 </div>
 
 <div>
