--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@ layout: clean
 
   <p>
     <ul>
-      <li><a href="https://www.parity.io/">Substrate (Parity)</a></li>
-      <li><a href="https://web3.foundation/">Web3</a></li>
-      <li><a href="https://radikal.jetzt/">radikal*</a></li>
+      <li><a href="https://effektio.org/">Effektio</a></li>
+      <li><a href="https://github.com/matrix-org/matrix-rust-sdk/">Matrix Rust SDK</a></li>
+      <li><a href="https://element.io/">Element</a></li>
       <li><a href="https://www.rustfest.eu/">RustFest</a>.eu</li>
       <li><a href="https://www.arewewebyet.org">AreWeWebYet</a></li>
       <li><a href="https://www.hackership.org">Hackership</a></li>
