roundabout update of everything

--- a/index.html
+++ b/index.html
@@ -17,17 +17,16 @@ layout: clean
 </div>
 
 <div class="main box" markdown="1">
-  <p markdown="1">You might have heard some of the projects I am involved in:</p>
+  <p markdown="1">You might have heard some of the projects I am/was involved in:</p>
 
   <p>
     <ul>
-      <li><a href="https://effektio.org/">Effektio</a></li>
+      <li><a href="https://acter.global/">Acter</a> (formerly <a href="https://effektio.org/">Effektio</a>)</li>
       <li><a href="https://github.com/matrix-org/matrix-rust-sdk/">Matrix Rust SDK</a></li>
       <li><a href="https://element.io/">Element</a></li>
       <li><a href="https://www.rustfest.eu/">RustFest</a>.eu</li>
       <li><a href="https://www.arewewebyet.org">AreWeWebYet</a></li>
       <li><a href="https://www.hackership.org">Hackership</a></li>
       <li><a href="https://www.opentechschool.org">OpenTechSchool</a></li>
-      <li><a href="https://www.bashy.io/">The Bashy Initiative</a></li>
   </p>
 </div>
